# kafka-mqtt-connector

./: README.md  docker-compose.yml  readme.md
app/: .gitignore  Dockerfile  readme.md  test.env
app/.devcontainer/: devcontainer.json
app/res/: client.crt
app/src/: CMakeLists.txt  main.cpp
app/src/include/: ConnectorFactory.cpp  ConnectorFactory.h  IFetchEnvironment.cpp  IFetchEnvironment.h  KafkaConnectorBuilder.cpp  KafkaConnectorBuilder.h  MqttConnector.cpp  MqttConnector.h  MqttConnectorBuilder.cpp  MqttConnectorBuilder.h
mosquitto/: ca.crt  client.key  mosquitto.conf
